[package]
name = "rune"
version = "0.1.0"
authors = ["Alexander von Gluck IV <kallisti5@unixzen.com>"]
license = "MIT"

[dependencies]
mbr = "*"
getopts = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "*"
tempdir = "0.3"
url = "*"
fatr = { git = "https://github.com/zanesterling/fatr.git" }
itertools = "0.5.9"
indicatif = "*"
