[package]
name = "rune"
version = "0.1.2"
authors = ["Alexander von Gluck IV <kallisti5@unixzen.com>"]
license = "MIT"

[dependencies]
mbr = "*"
getopts = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
curl = {version = "~0.4", features = ["static-curl", "static-ssl"]}
url = "*"
fatfs = "0.2.0"
itertools = "0.5.9"
indicatif = "0.16"
regex = "1"
